--- a/Text Reveal Starter/style.css
+++ b/Text Reveal Starter/style.css
@@ -47,8 +47,13 @@ nav {
   font-size: 2rem;
 }
 
+.cta-text h2 {
+  overflow: hidden;
+}
+
 .cta-text span {
   padding: 0rem 0.4rem;
+  display: block;
   text-shadow: rgba(0,0,0, 0.4) 0px 0px 20px;
 }
 
@@ -60,4 +65,5 @@ nav {
   border-radius: 0.3rem;
   color: rgb(33, 33, 33);
   border: none;
+  font-size: 0.7rem;
 }
